Thu May 17 18:52:41 2001  Jonathan Blandford  <jrb@redhat.com>

	* configure.in:
	* Makefile.am:
	* docs/*/*:
	Initial support for gtk-doc documentation.

2001-05-17  Darin Adler  <darin@eazel.com>

	* libgnomevfs/Makefile.am:
	* libgnomevfs/gnome-vfs-list-sort.c:
	* libgnomevfs/gnome-vfs-list-sort.h:
	Removed the unused gnome_vfs_list_sort function. The good news
	is that glib 2 has this same function (g_list_sort_with_data).

	* test/.cvsignore: Ignore the new test-ssl test program.

2001-05-14  Ian McKellar <yakk@yakk.net>

	* libgnomevfs/Makefile.am:
	Build fix.

2001-05-14  Ian McKellar  <yakk@yakk.net>

	* README.SSL:
	* acconfig.h:
	* configure.in:
	* libgnomevfs/Makefile.am:
	* libgnomevfs/gnome-vfs-init.c: (gnome_vfs_init):
	* libgnomevfs/gnome-vfs-ssl-private.h:
	* libgnomevfs/gnome-vfs-ssl.c:
	(gnome_vfs_ssl_init), (gnome_vfs_ssl_enabled), (gnome_vfs_ssl_new),
	(gnome_vfs_ssl_new_from_uri), (gnome_vfs_ssl_read),
	(gnome_vfs_ssl_write), (gnome_vfs_ssl_destroy):
	* libgnomevfs/gnome-vfs-ssl.h:
	Added an OpenSSL based SSL abstraction to gnome-vfs. This is so that
	modules (particularly the http module) will be able to implement SSL
	support.

	* test/Makefile.am:
	* test/test-ssl.c: (show_result), (main):
	Added a very simple test program for the SSL routines.

2001-05-16  Michael K. Fleming  <mfleming@eazel.com>

	gnome_vfs_app_context_get_current was not addref'ing
	the context it returned if it had to create a default context.
	This caused crashes in async operations in apps that do not use
	the app context mechanism.

	* libgnomevfs/gnome-vfs-app-context.c:
	(gnome_vfs_app_context_peek_current_internal),
	(gnome_vfs_app_context_peek_current),
	(gnome_vfs_app_context_get_current):

2001-05-16  Darin Adler  <darin@eazel.com>

	* libgnomevfs/gnome-vfs-app-context.c:
	(gnome_vfs_app_context_unref): Fix double-free.

2001-05-15  Maciej Stachowiak  <mjs@eazel.com>

	* libgnomevfs-pthread/gnome-vfs-async-ops.c,
	libgnomevfs/gnome-vfs-app-context.c,